2005-01-10  Andreas Kupries <andreask@activestate.com>

	* Makefile.in: Added -no-apps, and -app-path to the installer
	  targets, to ensure that a configure --bin-path is handled
	  correctly.

	  Thanks to Gregor Leusch <gleusch@users.sourceforge.net> for both
	  diagnosis and patch ([Tcllib SF Bug 1099727]).

2004-12-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/blowfish:        NEW MODULE: blowfish
	* installed_modules.tcl:   

2004-10-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* examples/htmlparse/webviewer.tcl: Added a sample app to 
	demonstrate the use of the htmlparse package. This also demos the
	use of the autoproxy package too.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: Added new module 'treeql' to the
	  installer. Thanks to Colin McCormack for donating it.

2004-09-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl (ainstall): Ensure existence of directory for the
	  applications to install.

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl (tclfiles, docfiles): Added code to exclude files under
	  SCCS directories from the validation. Required to prevent bogus
	  output when run in my BitKeeper repository. Also fixed bug in
	  docfiles, redefined the wrong command.

2004-09-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'tie added to installer. Tcl
	  files and documentation, no examples.

2004-08-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Added constraint 'tcl8.5plus'.

2004-08-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* modules/tar:
	* installed_modules.tcl: New module: 'tar'. Tcl files and
	  documentation, no examples.
