@@ -5,7 +5,13 @@
 # Copyright (c) 2005 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: rcs.test,v 1.1 2005/01/29 04:57:26 andreas_kupries Exp $
+# RCS: @(#) $Id: rcs.test,v 1.2 2005/01/29 05:39:02 andreas_kupries Exp $
+
+if {![package vsatisfies [package provide Tcl] 8.4]} {
+    puts "Aborting tests for rcs."
+    puts "Requiring Tcl 8.4, have [package present Tcl]"
+    return
+}
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
