@@ -3,10 +3,10 @@
 # Copyright (c) 2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: tie.test,v 1.3 2004/09/24 04:43:36 andreas_kupries Exp $
+# RCS: @(#) $Id: tie.test,v 1.4 2005/01/29 05:39:02 andreas_kupries Exp $
 
 if {![package vsatisfies [package provide Tcl] 8.4]} {
-    puts "Aborting tests for snit."
+    puts "Aborting tests for tie."
     puts "Requiring Tcl 8.4, have [package present Tcl]"
     return
 }
