@@ -1,3 +1,8 @@
+2005-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* fileutil.man: Fixed the doctools syntax error in the new text
+	  from the last entry.
+
 2005-01-26  David N. Welton  <davidw@dedasys.com>
 
 	* fileutil.man: Added a small note on the measure used to count
